--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </label>
             <div class="nav-newline"></div>
             <input class="form-control form-custom mr-sm-2 white-inputs nav-search" type="search" placeholder="Cerca" aria-label="Search">
-            <button class="btn btn-outline-success btn-custom my-2 my-sm-0" type="submit">Cerca</button>
+            <a href="risultati.html" class="btn btn-outline-success btn-custom my-2 my-sm-0" type="submit">Cerca</a>
         </form>
 
         <ul class="navbar-nav mr-auto">
@@ -226,7 +226,7 @@
                         <div class="row">
                             <div class="col-md-4 border-right">
                                 <div class="profile-img">
-                                    <img src="img/placeholder_annuncio.png" alt=""/>
+                                    <img src="img/image_not_found.png" alt=""/>
                                     <div class="file btn btn-lg x btn-primary mt-0">
                                         Inserisci foto
                                         <input type="file" name="file"/>
@@ -246,7 +246,7 @@
                                                     <option value="" disabled selected hidden>Categoria</option>
                                                     <option value="elettrodomestici">Elettrodomestici</option>
                                                     <option value="abbigliamento">Abbigliamento</option>
-                                                    <option value="fotoEVideo">FOto e video</option>
+                                                    <option value="fotoEVideo">Foto e video</option>
                                                     <option value="hobby">Hobby</option>
                                                 </select>
                                             </label>
@@ -347,7 +347,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary btn-outline-danger" data-dismiss="modal">Annulla</button>
-                    <button type="button" class="btn btn-primary btn-outline-success">Salva modifiche</button>
+                    <a href="annuncio.html" class="btn btn-primary btn-outline-success">Pubblica</a>
                 </div>
             </div>
         </div>
@@ -578,7 +578,7 @@
 
 
 
-<div class="bbb_viewed">
+<div class="bbb_viewed pb-0">
     <div class="container">
         <div class="row">
             <div class="col">
@@ -596,92 +596,69 @@
                         <div class="owl-carousel owl-theme bbb_viewed_slider">
                             <div class="owl-item">
                                 <div class="bbb_viewed_item discount d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img
-                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924153/alcatel-smartphones-einsteiger-mittelklasse-neu-3m.jpg"
-                                            alt=""></div>
+                                    <a href="annuncio.html" class="bbb_viewed_image"><img
+                                            src="img/annuncio4.jpg"
+                                            alt=""></a>
                                     <div class="bbb_viewed_content text-center">
-                                        <div class="bbb_viewed_price">₹12225<span>₹13300</span></div>
-                                        <div class="bbb_viewed_name"><a href="#">Alkatel Phone</a></div>
+                                        <div class="bbb_viewed_price">€80</div>
+                                        <div class="bbb_viewed_name"><a href="annuncio.html">Ramponi da ghiaccio</a></div>
                                     </div>
-                                    <ul class="item_marks">
-                                        <li class="item_mark item_discount">-25%</li>
-                                        <li class="item_mark item_new">new</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="owl-item">
-                                <div class="bbb_viewed_item d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img
-                                            src="img/filippo.png"
-                                            alt=""></div>
-                                    <div class="bbb_viewed_content text-center">
-                                        <div class="bbb_viewed_price">€10000</div>
-                                        <div class="bbb_viewed_name"><a href="#">Quadro cubista</a></div>
-                                    </div>
-                                    <ul class="item_marks">
-                                        <li class="item_mark item_discount">-25%</li>
-                                        <li class="item_mark item_new">new</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="owl-item">
-                                <div class="bbb_viewed_item d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img
-                                            src="https://res.cloudinary.com/dxfq3iotg/image/upload/v1560924241/8fbb415a2ab2a4de55bb0c8da73c4172--ps.jpg"
-                                            alt=""></div>
-                                    <div class="bbb_viewed_content text-center">
-                                        <div class="bbb_viewed_price">₹22250</div>
-                                        <div class="bbb_viewed_name"><a href="#">Samsung Mobile</a></div>
-                                    </div>
-                                    <ul class="item_marks">
-                                        <li class="item_mark item_discount">-25%</li>
-                                        <li class="item_mark item_new">new</li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <div class="owl-item">
-                                <div class="bbb_viewed_item is_new d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img
-                                            src="img/jona.jpeg"
-                                            alt=""></div>
-                                    <div class="bbb_viewed_content text-center">
-                                        <div class="bbb_viewed_price">£1379</div>
-                                        <div class="bbb_viewed_name"><a href="#">OPLA</a></div>
-                                    </div>
-                                    <ul class="item_marks">
-                                        <li class="item_mark item_discount">-25%</li>
-                                        <li class="item_mark item_new">new</li>
-                                    </ul>
                                 </div>
                             </div>
                             <div class="owl-item">
                                 <div class="bbb_viewed_item discount d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img
-                                            src="img/cormorano.jpeg"
-                                            alt=""></div>
+                                    <a href="annuncio.html" class="bbb_viewed_image"><img
+                                            src="img/annuncio3.jpg"
+                                            alt=""></a>
                                     <div class="bbb_viewed_content text-center">
-                                        <div class="bbb_viewed_price">$225<span>$300</span></div>
-                                        <div class="bbb_viewed_name"><a href="#">Cormorano</a></div>
+                                        <div class="bbb_viewed_price">€40</div>
+                                        <div class="bbb_viewed_name"><a href="annuncio.html">Manuele di PHP e mysql</a></div>
                                     </div>
-                                    <ul class="item_marks">
-                                        <li class="item_mark item_discount">ghesboro</li>
-                                        <li class="item_mark item_new">new</li>
-                                    </ul>
                                 </div>
                             </div>
                             <div class="owl-item">
-                                <div class="bbb_viewed_item d-flex flex-column align-items-center justify-content-center text-center">
-                                    <div class="bbb_viewed_image"><img
-                                            src="img/lidl.jpeg"
-                                            alt=""></div>
+                                <div class="bbb_viewed_item discount d-flex flex-column align-items-center justify-content-center text-center">
+                                    <a href="annuncio.html" class="bbb_viewed_image"><img
+                                            src="img/annuncio5.jpg"
+                                            alt=""></a>
                                     <div class="bbb_viewed_content text-center">
-                                        <div class="bbb_viewed_price">€13275</div>
-                                        <div class="bbb_viewed_name"><a href="#">Chitarra marchio famoso</a></div>
+                                        <div class="bbb_viewed_price">€50</div>
+                                        <div class="bbb_viewed_name"><a href="annuncio.html">Marranzano antico</a></div>
                                     </div>
-                                    <ul class="item_marks">
-                                        <li class="item_mark item_discount">+25%</li>
-                                        <li class="item_mark item_new">new</li>
-                                    </ul>
+                                </div>
+                            </div>
+                            <div class="owl-item">
+                                <div class="bbb_viewed_item discount d-flex flex-column align-items-center justify-content-center text-center">
+                                    <a href="annuncio.html" class="bbb_viewed_image"><img
+                                            src="img/annuncio2.jpg"
+                                            alt=""></a>
+                                    <div class="bbb_viewed_content text-center">
+                                        <div class="bbb_viewed_price">€1379</div>
+                                        <div class="bbb_viewed_name"><a href="annuncio.html">Bottiglia rara di Champagne</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item">
+                                <div class="bbb_viewed_item discount d-flex flex-column align-items-center justify-content-center text-center">
+                                    <a href="annuncio.html" class="bbb_viewed_image"><img
+                                            src="img/annuncio1.jpg"
+                                            alt=""></a>
+                                    <div class="bbb_viewed_content text-center">
+                                        <div class="bbb_viewed_price">€225</div>
+                                        <div class="bbb_viewed_name"><a href="annuncio.html">Cuffie da gaming</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item">
+                                <div class="bbb_viewed_item discount d-flex flex-column align-items-center justify-content-center text-center">
+                                    <a href="annuncio.html" class="bbb_viewed_image"><img
+                                            src="img/lidl.jpeg"
+                                            alt="">
+                                    </a>
+                                    <div class="bbb_viewed_content text-center">
+                                        <div class="bbb_viewed_price">€100</div>
+                                        <div class="bbb_viewed_name"><a href="annuncio.html">Chitarra Lidl</a></div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -691,6 +668,94 @@
         </div>
     </div>
 </div>
+
+
+
+<div class="bbb_viewed">
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <div class="bbb_main_container drop-shadow">
+                    <div class="bbb_viewed_title_container">
+                        <h3 class="bbb_viewed_title">Venditori <span>TOP</span></h3>
+                        <div class="bbb_viewed_nav_container">
+                            <div class="bbb_viewed_nav bbb_viewed_prev_v"><img src="img/chevron-left-solid.svg"
+                                                                             alt="sinistra"></div>
+                            <div class="bbb_viewed_nav bbb_viewed_next_v"><img src="img/chevron-right-solid.svg"
+                                                                             alt="destra"></div>
+                        </div>
+                    </div>
+                    <div class="bbb_viewed_slider_container">
+                        <div class="owl-carousel owl-theme bbb_viewed_slider_v">
+                            <div class="owl-item">
+                                <div class="bbb_viewed_item discount d-flex flex-column align-items-center justify-content-center text-center">
+                                    <a href="profile.html" class="bbb_viewed_image"><img
+                                            src="img/venditore5.png"
+                                            alt=""></a>
+                                    <div class="bbb_viewed_content text-center">
+                                        <div class="bbb_viewed_name"><a href="profile.html">Davide Ziaki</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item">
+                                <div class="bbb_viewed_item d-flex flex-column align-items-center justify-content-center text-center">
+                                    <a href="profile.html" class="bbb_viewed_image"><img
+                                            src="img/venditore4.png"
+                                            alt=""></a>
+                                    <div class="bbb_viewed_content text-center">
+                                        <div class="bbb_viewed_name"><a href="profile.html">Giulia Vincenti</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item">
+                                <div class="bbb_viewed_item d-flex flex-column align-items-center justify-content-center text-center">
+                                    <a href="profile.html" class="bbb_viewed_image"><img
+                                            src="img/venditore6.jpg"
+                                            alt=""></a>
+                                    <div class="bbb_viewed_content text-center">
+                                        <div class="bbb_viewed_name"><a href="profile.html">Cecilia Fusorari</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item">
+                                <div class="bbb_viewed_item is_new d-flex flex-column align-items-center justify-content-center text-center">
+                                    <a href="profile.html" class="bbb_viewed_image"><img
+                                            src="img/venditore2.jpg"
+                                            alt=""></a>
+                                    <div class="bbb_viewed_content text-center">
+                                        <div class="bbb_viewed_name"><a href="profile.html">Elena Crosten</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item">
+                                <div href="annuncio.html" class="bbb_viewed_item discount d-flex flex-column align-items-center justify-content-center text-center">
+                                    <a href="profile.html" class="bbb_viewed_image"><img
+                                            src="img/venditore1.jpg"
+                                            alt=""></a>
+                                    <div class="bbb_viewed_content text-center">
+                                        <div class="bbb_viewed_name"><a href="profile.html">Edoardo Perego</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="owl-item">
+                                <div class="bbb_viewed_item d-flex flex-column align-items-center justify-content-center text-center">
+                                    <a href="profile.html" class="bbb_viewed_image"><img
+                                            src="img/venditore3.jpg"
+                                            alt="">
+                                    </a>
+                                    <div class="bbb_viewed_content text-center">
+                                        <div class="bbb_viewed_name"><a href="profile.html">Vincenzo Rossi</a></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- Footer -->
 <footer class="page-footer font-small blue pt-4">
